# Odyssey

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PUBLISH.md  README.md  compose.yaml  lefthook.yml
.github/workflows/: ci-chek.yml  coverage.yml  docs.yml
bundles/code-act/: README.md  odyssey.bundle.yaml
bundles/code-act/agents/code-act/: Cargo.toml  agent.yaml
bundles/code-act/agents/code-act/src/: lib.rs
bundles/hello-world/: .gitignore  README.md  agent.yaml  odyssey.bundle.json5  odyssey.bundle.yaml
bundles/hello-world/agents/hello-world/: agent.yaml
bundles/hello-world/resources/: hello.md
bundles/odyssey-agent/: README.md  agent.yaml  odyssey.bundle.json5  odyssey.bundle.yaml
bundles/odyssey-agent/agents/odyssey-agent/: Cargo.toml  agent.yaml  module.wasm
bundles/odyssey-agent/agents/odyssey-agent/src/: lib.rs
bundles/odyssey-agent/skills/weather/: SKILL.md
configs/: runtime-config.example.yml
crates/odyssey-rs/: Cargo.toml
crates/odyssey-rs-agent-abi/: Cargo.toml
crates/odyssey-rs-agent-abi/src/: lib.rs
crates/odyssey-rs-agent-abi/wit/: odyssey-agent.wit
crates/odyssey-rs-agent-sdk/: Cargo.toml
crates/odyssey-rs-agent-sdk/src/: app.rs  host_tools.rs  lib.rs
crates/odyssey-rs-bundle/: Cargo.toml
crates/odyssey-rs-bundle/src/: build.rs  client.rs  constants.rs  distribution.rs  error.rs  inspect.rs  layout.rs  lib.rs  reference.rs  store.rs  test_support.rs
crates/odyssey-rs-bundle/tests/: distribution.rs
crates/odyssey-rs-manifest/: Cargo.toml
crates/odyssey-rs-manifest/src/: agent_spec.rs  bundle_manifest.rs  error.rs  lib.rs  loader.rs  reference.rs  validation.rs
crates/odyssey-rs-protocol/: Cargo.toml
crates/odyssey-rs-protocol/src/: lib.rs  skill.rs
crates/odyssey-rs-runtime/: Cargo.toml
crates/odyssey-rs-runtime/configs/: README.md  default_agent.yaml  gitignore  odyssey.bundle.json5  odyssey.bundle.yaml
crates/odyssey-rs-runtime/src/: bundle.rs  config.rs  error.rs  lib.rs
crates/odyssey-rs-runtime/src/agent/: executor.rs  mod.rs  wasm.rs
crates/odyssey-rs-runtime/src/memory/: mod.rs  registry.rs
crates/odyssey-rs-runtime/src/resolver/: agent.rs  bundle.rs  llm.rs  mod.rs
crates/odyssey-rs-runtime/src/runtime/: engine.rs  executor.rs  history.rs  mod.rs  prompt.rs  scheduler.rs  templates.rs  tool_event.rs
crates/odyssey-rs-runtime/src/sandbox/: bridge.rs  mod.rs
crates/odyssey-rs-runtime/src/session/: approval.rs  mod.rs  store.rs
crates/odyssey-rs-runtime/src/skill/: mod.rs  store.rs
crates/odyssey-rs-runtime/src/tool/: mod.rs  router.rs
crates/odyssey-rs-runtime/src/utils/: bundle_id.rs  fs.rs  mod.rs
crates/odyssey-rs-sandbox/: Cargo.toml
crates/odyssey-rs-sandbox/src/: error.rs  lib.rs  runner.rs  runtime.rs  types.rs
crates/odyssey-rs-sandbox/src/provider/: linux.rs  local.rs  mod.rs  noop.rs
crates/odyssey-rs-sandbox/tests/: policy.rs
crates/odyssey-rs-server/: Cargo.toml
crates/odyssey-rs-server/src/: app.rs  lib.rs  models.rs  routes.rs  sse.rs
crates/odyssey-rs-tools/: Cargo.toml
crates/odyssey-rs-tools/src/: adaptor.rs  context.rs  error.rs  lib.rs  registry.rs  tool.rs
crates/odyssey-rs-tools/src/builtins/: bash.rs  filesystem.rs  mod.rs  skill.rs
crates/odyssey-rs-tools/tests/: tools.rs
crates/odyssey-rs-tui/: Cargo.toml  README.md
crates/odyssey-rs-tui/src/: cli.rs  client.rs  history.rs  lib.rs  main.rs  spawn.rs  terminal.rs  tui_config.rs
crates/odyssey-rs-tui/src/app/: events.rs  mod.rs  render.rs  scroll.rs  state.rs  types.rs
crates/odyssey-rs-tui/src/handlers/: agent.rs  bundle.rs  input.rs  mod.rs  model.rs  session.rs  slash.rs
crates/odyssey-rs-tui/src/ui/: markdown.rs  mod.rs  theme.rs
crates/odyssey-rs-tui/src/ui/widgets/: chat.rs  header.rs  hero.rs  input.rs  logo.rs  mod.rs  slash_palette.rs  status_bar.rs  viewer.rs
crates/odyssey-rs/src/: cli.rs  lib.rs  main.rs  remote.rs
docs/: README.md  architecture-runtime.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/content/: index.mdx
docs/content/guides/: getting-started.mdx
docs/content/reference/: bundle-format.mdx  cli-and-server.mdx  sandbox-and-tools.mdx
docs/content/runtime/: architecture.mdx  events-and-approvals.mdx  runtime-model.mdx
docs/src/css/: custom.css
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
