[workspace]
resolver = "2"
members = [
    "crates/odyssey-rs",
    "crates/odyssey-rs-manifest",
    "crates/odyssey-rs-bundle",
    "crates/odyssey-rs-protocol",
    "crates/odyssey-rs-runtime",
    "crates/odyssey-rs-tools",
    "crates/odyssey-rs-sandbox",
    "crates/odyssey-rs-server",
    "crates/odyssey-rs-tui",
    "examples/*",
]

default-members = ["crates/odyssey-rs"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Lean bundle-first agent runtime in Rust"
repository = "https://github.com/liquidos-ai/odyssey"
keywords = ["agents", "runtime", "bundles"]
categories = []
readme = "README.md"

[workspace.dependencies]
odyssey-rs = { path = "crates/odyssey-rs", version = "0.1.0" }
odyssey-rs-manifest = { path = "crates/odyssey-rs-manifest", version = "0.1.0" }
odyssey-rs-bundle = { path = "crates/odyssey-rs-bundle", version = "0.1.0" }
odyssey-rs-protocol = { path = "crates/odyssey-rs-protocol", version = "0.1.0" }
odyssey-rs-runtime = { path = "crates/odyssey-rs-runtime", version = "0.1.0" }
odyssey-rs-tools = { path = "crates/odyssey-rs-tools", version = "0.1.0" }
odyssey-rs-sandbox = { path = "crates/odyssey-rs-sandbox", version = "0.1.0" }
odyssey-rs-server = { path = "crates/odyssey-rs-server", version = "0.1.0" }
odyssey-rs-tui = { path = "crates/odyssey-rs-tui", version = "0.1.0" }

autoagents-core = { version = "0.3.6" }
autoagents-llm = { version = "0.3.6" }
autoagents-protocol = { version = "0.3.6" }

anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["json", "macros"] }
chrono = { version = "0.4.44", features = ["serde", "clock"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
futures-util = "0.3.32"
hex = "0.4.3"
json5 = "1.3.1"
log = "0.4.29"
parking_lot = "0.12.5"
pulldown-cmark = "0.13.1"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "stream",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shell-words = "1.1.1"
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
which = "8.0.2"
env_logger = "0.11.9"
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
tera = "1.20.1"
libc = "0.2.183"
