[package]
name = "odyssey-rs-manifest"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-protocol.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
wasmparser.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
