[package]
name = "odyssey-rs-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
default = []
cuda = ["autoagents-llamacpp/cuda"]
metal = ["autoagents-llamacpp/metal"]

[dependencies]
odyssey-rs-bundle.workspace = true
odyssey-rs-agent-abi.workspace = true
odyssey-rs-manifest.workspace = true
odyssey-rs-protocol.workspace = true
odyssey-rs-tools.workspace = true
odyssey-rs-sandbox.workspace = true

autoagents-core = { workspace = true, features = ["codeact"] }
autoagents-llm = { workspace = true, features = ["openai", "anthropic", "deepseek", "google", "groq", "azure_openai", "openrouter", "xai", "phind", "minimax"] }
autoagents-llamacpp = { workspace = true , features = ["mtmd"] }
autoagents-protocol.workspace = true

async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
walkdir.workspace = true
tera.workspace = true
which.workspace = true
log.workspace = true
shell-words.workspace = true
tempfile.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmparser.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
