[package]
name = "odyssey-rs-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-protocol.workspace = true

async-trait.workspace = true
hex.workspace = true
sha2.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
which.workspace = true
libc.workspace = true
tempfile.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
