[package]
name = "odyssey-rs-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-bundle.workspace = true
odyssey-rs-protocol.workspace = true
odyssey-rs-runtime.workspace = true

axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tower = { version = "0.5.2", features = ["util"] }
