[package]
name = "odyssey-rs-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-sandbox.workspace = true
autoagents-core.workspace = true

async-trait.workspace = true
ignore = "0.4.25"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words.workspace = true
thiserror.workspace = true
uuid.workspace = true
walkdir.workspace = true
which.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio.workspace = true
