[package]
name = "odyssey-rs-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
odyssey-rs-bundle.workspace = true
odyssey-rs-protocol.workspace = true
odyssey-rs-runtime.workspace = true

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
env_logger.workspace = true
log.workspace = true
pulldown-cmark.workspace = true
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
