[package]
name = "odyssey-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "odyssey"
path = "src/main.rs"

[dependencies]
odyssey-rs-manifest.workspace = true
odyssey-rs-bundle.workspace = true
odyssey-rs-protocol.workspace = true
odyssey-rs-runtime.workspace = true
odyssey-rs-server.workspace = true

anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
env_logger.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
