[package]
name = "hello-world-example"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
odyssey-rs-protocol.workspace = true
odyssey-rs-runtime.workspace = true
tokio.workspace = true
uuid.workspace = true
